// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Analyzer extractToManifest should extract manifest 1`] = `
[
  [],
  {
    "documents": [
      {
        "body": "fragment MyFragment on Query {
  hello
}",
        "documentEnd": {
          "character": 59,
          "line": 0,
        },
        "documentStart": {
          "character": 21,
          "line": 0,
        },
        "fileName": "fragment.ts",
        "fragmentName": "MyFragment",
        "operationName": undefined,
        "tag": "gql",
        "templateLiteralNodeEnd": {
          "character": 60,
          "line": 0,
        },
        "templateLiteralNodeStart": {
          "character": 20,
          "line": 0,
        },
        "type": "fragment",
      },
      {
        "body": "query MyQuery {
  ...MyFragment
}

fragment MyFragment on Query {
  hello
}",
        "documentEnd": {
          "character": 49,
          "line": 0,
        },
        "documentStart": {
          "character": 18,
          "line": 0,
        },
        "fileName": "main.ts",
        "fragmentName": undefined,
        "operationName": "MyQuery",
        "tag": "gql",
        "templateLiteralNodeEnd": {
          "character": 50,
          "line": 0,
        },
        "templateLiteralNodeStart": {
          "character": 17,
          "line": 0,
        },
        "type": "query",
      },
    ],
  },
]
`;

exports[`Analyzer report should create markdown report 1`] = `
"# Extracted GraphQL Operations
## Queries

### MyQuery

\`\`\`graphql
query MyQuery {
  ...MyFragment
}

fragment MyFragment on Query {
  hello
}
\`\`\`

From [main.ts:1:19](main.ts#L1-L1)
    
---
Extracted by [ts-graphql-plugin](https://github.com/Quramy/ts-graphql-plugin)"
`;

exports[`Analyzer report should create markdown report from manifest 1`] = `
"# Extracted GraphQL Operations
## Queries

### MyQuery

\`\`\`graphql
query MyQuery {
  hello
}
\`\`\`

From [main.ts:1:19](main.ts#L1-L1)
    
---
Extracted by [ts-graphql-plugin](https://github.com/Quramy/ts-graphql-plugin)"
`;

exports[`Analyzer typegen should create type files 1`] = `
"/* eslint-disable */
/* This is an autogenerated file. Do not edit this file directly! */
export type MyFragment = {
    hello: string;
};
"
`;

exports[`Analyzer typegen should create type files 2`] = `
"/* eslint-disable */
/* This is an autogenerated file. Do not edit this file directly! */
export type MyQuery = MyFragment;
export type MyQueryVariables = {};
export type MyFragment = {
    hello: string;
};
"
`;

exports[`Analyzer typegen should report error when no schema 1`] = `"No GraphQL schema. Confirm your ts-graphql-plugin's "schema" configuration at tsconfig.json's compilerOptions.plugins section."`;

exports[`Analyzer validate should report duplicatedFragmentDefinitions error 1`] = `
[
  [ErrorWithLocation: All fragments must have an unique name.],
  [ErrorWithLocation: All fragments must have an unique name.],
]
`;

exports[`Analyzer validate should report error when no schema 1`] = `"No GraphQL schema. Confirm your ts-graphql-plugin's "schema" configuration at tsconfig.json's compilerOptions.plugins section."`;

exports[`Analyzer validate should validate project with schema error project 1`] = `"Syntax Error: Unexpected Name "hogehoge"."`;

exports[`Analyzer validate should validate project with semantic warning project 1`] = `"Unknown fragment "F2"."`;
